played with and fixed bootstrap formatting, aligned the side-div to be boxes of the same width, added borders, updated README. It looks good!

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,48 @@
 #weather-dashboard {
-    background: blue;
     color: white;
-    text-align: center;
+    text-align: left;
     line-height: 75px;
-}
-
-.hide {
-    display: none;
+    margin-left: 20px;
 }
 
 #oldCities {
     display: flex;
     flex-direction: column;
+    display: block;
+    width: 100%;
+    margin-left: -30px;
 }
 
 .searchedCities {
-    margin-top: 5px;
-    margin-bottom: 5px;
+    display: block;
+    margin-top: 10px;
+    width: 110%;
+    font-size: larger;
 }
 
 #submitBtn {
     display: flex;
     margin: auto;
+    margin-bottom: 15px;
+    display: block;
+    width: 100%;
+}
+
+.fiveDay {
+    margin-bottom: 20px;
+}
+
+.space {
+    margin-top: 10px;
     margin-bottom: 5px;
+    line-height: 1.5;
+    display: block;
+    width: 100%;
+}
+
+#searchBox {
+    display: block;
+    width: 100%;
+    margin-top: 10px;
+    margin-bottom: 20px;
 }
